--- a/configs/feria_fit/G335.579-0.272_alma3.cfg
+++ b/configs/feria_fit/G335.579-0.272_alma3.cfg
@@ -32,7 +32,7 @@ transition = 18(3,15)-17(4,14)A,vt=0
 
 [fixed_params]
 rot = -1
-rin = CB
+rin = 10
 ireheight = 0.
 ireflare = 30
 irenprof = -1.5
