--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.2.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.2.cfg
@@ -4,7 +4,6 @@ nrows = 1
 sharex = false
 sharey = false
 styles = maps lipari_r aspect_auto
-#styles = maps lipari aspect_auto thick_border
 vertical_cbar = false
 horizontal_cbar = true
 left = 0.8
@@ -34,7 +33,7 @@ vlines = 0 arcsec
 vlines_linestyle = :
 vlines_color = #adacac
 hlines_linestyle = --
-vlines_color = #adacac
+hlines_color = #adacac
 self_contours = true
 contour_linewidth = 0.5
 contour_stretch = log
