--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.27.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.27.cfg
@@ -38,6 +38,7 @@ hlines_color = #adacac
 self_contours = true
 contour_linewidth = 0.5
 contour_stretch = log
+contour_colors = #494a49
 vmin = 0. mJy/beam
 basedir = ..
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
