Change color and other figure improvements

--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.11.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.11.cfg
@@ -43,7 +43,7 @@ basedir = ..
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
 # Colors
-class = #ed7d3a
+class = #b739ed
 keplerian = #ef2d56
 label_alpha = 0.9
 label_edgecolor = ${class}
@@ -60,7 +60,7 @@ xlim = -0.4 0.4 arcsec
 hlines = -43.2 km/s
 rms = 1.7  mJy/beam
 vmax = 31 mJy/beam
-label = PA=${paval}${deg} - $$\alpha = -0.45$$
+label = PA=${paval}${deg} - $$\alpha{=}-0.45$$
 
 [G333.46-0.16_alma7_pvedge]
 loc = 0 0
@@ -126,6 +126,8 @@ hlines = -43.2 km/s
 rms = 1.7  mJy/beam
 vmax = 31 mJy/beam
 label = PA=${paval}${deg}
+label_edgecolor = k
+label_font_color = k
 
 [G333.46-0.16_alma7_infall]
 loc = 0 1
