--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.12.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.12.cfg
@@ -43,7 +43,7 @@ basedir = ..
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
 # Colors
-class = #ed7d3a
+class = #b739ed
 keplerian = #ef2d56
 label_alpha = 0.9
 label_edgecolor = ${class}
@@ -59,7 +59,7 @@ pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra247.74486_dec-48.73163.
 hlines = -46.9 km/s
 rms = 1.4 mJy/beam
 vmax = 25 mJy/beam
-label = PA=${paval}${deg} - $$\alpha = -0.62$$
+label = PA=${paval}${deg} - $$\alpha{=}-0.62$$
 
 [G335.579-0.272_alma1_pvedge]
 loc = 0 0
@@ -124,6 +124,8 @@ hlines = -46.9 km/s
 rms = 1.4 mJy/beam
 vmax = 25 mJy/beam
 label = PA=${paval}${deg} - Infall
+label_edgecolor = k
+label_font_color = k
 
 [G335.579-0.272_alma1_infall]
 loc = 0 1
