--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.15.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.15.cfg
@@ -59,7 +59,7 @@ pvmap = ${results}/${source}_alma2_rotation.CH3OH_spw0.ra247.44221_dec-48.26388.
 hlines = -50.51 km/s
 rms = 1.8 mJy/beam
 vmax = 32 mJy/beam
-label = PA=${paval}${deg} - $$\alpha = -0.7$$
+label = PA=${paval}${deg} - $$\alpha{=}-0.7$$
 
 [G335.78+0.17_alma2_pvedge]
 loc = 0 0
@@ -125,6 +125,8 @@ hlines = -50.51 km/s
 rms = 1.8 mJy/beam
 vmax = 32 mJy/beam
 label = PA=${paval}${deg}
+label_edgecolor = k
+label_font_color = k
 
 [G335.78+0.17_alma2_infall]
 loc = 0 1
