--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.16.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.16.cfg
@@ -59,7 +59,7 @@ pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra248.78858_dec-48.77991.
 hlines = -47.2 km/s
 rms = 1.7 mJy/beam
 vmax = 60 mJy/beam
-label = PA=${paval}${deg} - $$\alpha = -2.1$$
+label = PA=${paval}${deg} - $$\alpha{=}-2.1$$
 
 [G336.01-0.82_alma1_pvedge]
 loc = 0 0
@@ -124,6 +124,8 @@ hlines = -47.2 km/s
 rms = 1.7 mJy/beam
 vmax = 60 mJy/beam
 label = PA=${paval}${deg}
+label_edgecolor = k
+label_font_color = k
 
 [G336.01-0.82_alma1_infall]
 loc = 0 1
