--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.17.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.17.cfg
@@ -43,7 +43,7 @@ basedir = ..
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
 # Colors
-class = #ed7d3a
+class = #b739ed
 keplerian = #ef2d56
 label_alpha = 0.9
 label_edgecolor = ${class}
@@ -59,7 +59,7 @@ pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra283.32503_dec1.42373.PA
 hlines = 58.44 km/s
 rms = 1.3 mJy/beam
 vmax = 35 mJy/beam
-label = PA=${paval}${deg} - $$\alpha = -0.58$$
+label = PA=${paval}${deg} - $$\alpha{=}-0.58$$
 
 [G34.43+0.24_alma1_pvedge]
 loc = 0 0
@@ -124,6 +124,8 @@ hlines = 58.44 km/s
 rms = 1.3 mJy/beam
 vmax = 35 mJy/beam
 label = PA=${paval}${deg}
+label_edgecolor = k
+label_font_color = k
 
 [G34.43+0.24_alma1_infall]
 loc = 0 1
