--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.18.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.18.cfg
@@ -61,7 +61,7 @@ xlim = -0.55 0.55 arcsec
 hlines = 45.94 km/s
 rms = 1.9 mJy/beam
 vmax = 41 mJy/beam
-label = PA=${paval}${deg} - $$\alpha = -0.7$$
+label = PA=${paval}${deg} - $$\alpha{=}-0.7$$
 
 [G35.03+0.35_A_alma1_pvedge]
 loc = 0 0
@@ -128,6 +128,8 @@ hlines = 45.94 km/s
 rms = 1.9 mJy/beam
 vmax = 41 mJy/beam
 label = PA=${paval}${deg} - Outflow
+label_edgecolor = k
+label_font_color = k
 
 [G35.03+0.35_A_alma1_infall]
 loc = 0 1
