--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.19.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.19.cfg
@@ -43,7 +43,7 @@ basedir = ..
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
 # Colors
-class = #ed7d3a
+class = #b739ed
 keplerian = #ef2d56
 label_alpha = 0.9
 label_edgecolor = ${class}
@@ -59,7 +59,7 @@ pvmap = ${results}/${source}_alma1_rotation.CH3CN_K3.ra284.52557_dec1.61873.PA${
 hlines = 35.93 km/s
 rms = 2.5 mJy/beam
 vmax = 56 mJy/beam
-label = PA=${paval}${deg} - $$\alpha = -0.46$$
+label = PA=${paval}${deg} - $$\alpha{=}-0.46$$
 
 [G35.13-0.74_alma1_pvedge]
 loc = 0 0
@@ -124,6 +124,8 @@ hlines = 35.93 km/s
 rms = 2.5 mJy/beam
 vmax = 56 mJy/beam
 label = PA=${paval}${deg}
+label_edgecolor = k
+label_font_color = k
 
 [G35.13-0.74_alma1_infall]
 loc = 0 1
