--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.20.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.20.cfg
@@ -60,7 +60,7 @@ xlim = -0.25 0.23 arcsec
 hlines = 34.39 km/s
 rms = 2.5 mJy/beam
 vmax = 25 mJy/beam
-label = PA=${paval}${deg} - $$\alpha = -1.0$$
+label = PA=${paval}${deg} - $$\alpha{=}-1.0$$
 
 [G35.13-0.74_alma2_pvedge]
 loc = 0 0
@@ -126,6 +126,8 @@ hlines = 34.39 km/s
 rms = 2.5 mJy/beam
 vmax = 25 mJy/beam
 label = PA=${paval}${deg}
+label_edgecolor = k
+label_font_color = k
 
 [G35.13-0.74_alma2_infall]
 loc = 0 1
