--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.22.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.22.cfg
@@ -43,7 +43,7 @@ basedir = ..
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
 # Colors
-class = #ed7d3a
+class = #b739ed
 keplerian = #ef2d56
 label_alpha = 0.9
 label_edgecolor = ${class}
@@ -59,7 +59,7 @@ pvmap = ${results}/${source}_alma14_rotation.CH3CN_K3.ra270.12763_dec-24.06750.P
 hlines = 7.92 km/s
 rms = 1.8 mJy/beam
 vmax = 35 mJy/beam
-label = PA=${paval}${deg} - $$\alpha = -0.4$$
+label = PA=${paval}${deg} - $$\alpha{=}-0.4$$
 
 [G5.89-0.37_alma14_pvedge]
 loc = 0 0
@@ -124,6 +124,8 @@ hlines = 7.92 km/s
 rms = 1.8 mJy/beam
 vmax = 35 mJy/beam
 label = PA=${paval}${deg}
+label_edgecolor = k
+label_font_color = k
 
 [G5.89-0.37_alma14_infall]
 loc = 0 1
