--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.24.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.24.cfg
@@ -60,7 +60,7 @@ pvmap = ${results}/${source}_alma3_rotation.CH3CN_K3.ra272.96417_dec-17.52498.PA
 hlines = 33.02 km/s
 rms = 1.6 mJy/beam
 vmax = 35 mJy/beam
-label = PA=${paval}${deg} - $$\alpha = -0.80$$
+label = PA=${paval}${deg} - $$\alpha{=}-0.80$$
 
 [IRAS_180891732_alma3_pvedge]
 loc = 0 0
@@ -126,6 +126,8 @@ hlines = 33.02 km/s
 rms = 1.6 mJy/beam
 vmax = 35 mJy/beam
 label = PA=${paval}${deg}
+label_edgecolor = k
+label_font_color = k
 
 [IRAS_180891732_alma3_infall]
 loc = 0 1
