--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.26.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.26.cfg
@@ -60,7 +60,7 @@ pvmap = ${results}/${source}_alma3_rotation.CH3CN_K3.ra275.28802_dec-14.53017.PA
 hlines = 61.12 km/s
 rms = 1.4 mJy/beam
 vmax = 40 mJy/beam
-label = PA=${paval}${deg} - $$\alpha = -0.71$$
+label = PA=${paval}${deg} - $$\alpha{=}-0.71$$
 
 [IRAS_18182-1433_alma3_pvedge]
 loc = 0 0
@@ -126,6 +126,8 @@ hlines = 61.12 km/s
 rms = 1.4 mJy/beam
 vmax = 40 mJy/beam
 label = PA=${paval}${deg} - Outflow
+label_edgecolor = k
+label_font_color = k
 
 [IRAS_18182-1433_alma3_infall]
 loc = 0 1
