--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.27.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.27.cfg
@@ -44,7 +44,7 @@ basedir = ..
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
 # Colors
-class = #ed7d3a
+class = #b739ed
 keplerian = #ef2d56
 label_alpha = 0.9
 label_edgecolor = ${class}
@@ -59,7 +59,7 @@ pvmap = ${results}/${source}_alma1_rotation.HNCO_8.ra260.22258_dec-35.78275.PA${
 hlines = -8.0 km/s
 rms = 1.5 mJy/beam
 vmax = 45 mJy/beam
-label = PA=${paval}${deg} - $$\alpha = -0.6$$
+label = PA=${paval}${deg} - $$\alpha{=}-0.6$$
 
 [NGC6334I_alma1_pvedge]
 loc = 0 0
@@ -123,6 +123,8 @@ hlines = -8.0 km/s
 rms = 1.5 mJy/beam
 vmax = 45 mJy/beam
 label = PA=${paval}${deg}
+label_edgecolor = k
+label_font_color = k
 
 [NGC6334I_alma1_infall]
 loc = 0 1
