--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.31.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.31.cfg
@@ -43,7 +43,7 @@ basedir = ..
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
 # Colors
-class = #ed7d3a
+class = #b739ed
 keplerian = #ef2d56
 label_alpha = 0.9
 label_edgecolor = ${class}
@@ -60,7 +60,7 @@ pvmap = ${results}/${source}_alma4_rotation.CH3CN_K3.ra260.22863_dec-35.75179.PA
 hlines = -6.7 km/s
 rms = 1.7 mJy/beam
 vmax = 20 mJy/beam
-label = PA=${paval}${deg} - $$\alpha = -0.69$$
+label = PA=${paval}${deg} - $$\alpha{=}-0.69$$
 
 [NGC_6334_I_N_alma4_pvedge]
 loc = 0 0
@@ -126,6 +126,8 @@ hlines = -6.7 km/s
 rms = 1.7 mJy/beam
 vmax = 20 mJy/beam
 label = PA=${paval}${deg} - Infall
+label_edgecolor = k
+label_font_color = k
 
 [NGC_6334_I_N_alma4_infall]
 loc = 0 1
