--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.32.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.32.cfg
@@ -43,7 +43,7 @@ basedir = ..
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
 # Colors
-class = #ed7d3a
+class = #b739ed
 keplerian = #ef2d56
 label_alpha = 0.9
 label_edgecolor = ${class}
@@ -59,7 +59,7 @@ pvmap = ${results}/${source}_alma1a_rotation.CH3CN_K3.ra273.66463_dec-17.86670.P
 hlines = 37.9 km/s
 rms = 1.3 mJy/beam
 vmax = 40 mJy/beam
-label = PA=${paval}${deg} - $$\alpha = -0.53$$
+label = PA=${paval}${deg} - $$\alpha{=}-0.53$$
 
 [W33A_alma1a_pvedge]
 loc = 0 0
@@ -124,6 +124,8 @@ hlines = 37.9 km/s
 rms = 1.3 mJy/beam
 vmax = 40 mJy/beam
 label = PA=${paval}${deg} - Infall
+label_edgecolor = k
+label_font_color = k
 
 [W33A_alma1a_infall]
 loc = 0 1
