--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.4.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.4.cfg
@@ -59,7 +59,7 @@ pvmap = ${results}/${source}_alma1a_rotation.CH3CN_K3.ra273.49213_dec-18.90561.P
 hlines = 35.1 km/s
 rms = 1.1 mJy/beam
 vmax = 45 mJy/beam
-label = PA=${paval}${deg} - $$\alpha = -0.91$$
+label = PA=${paval}${deg} - $$\alpha{=}-0.91$$
 
 [G11.92-0.61_alma1a_pvedge]
 loc = 0 0
@@ -124,6 +124,8 @@ hlines = 35.1 km/s
 rms = 1.1 mJy/beam
 vmax = 45 mJy/beam
 label = PA=${paval}${deg} - Infall
+label_edgecolor = k
+label_font_color = k
 
 [G11.92-0.61_alma1a_infall]
 loc = 0 1
