--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.5.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.5.cfg
@@ -43,7 +43,7 @@ basedir = ..
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
 # Colors
-class = #ed7d3a
+class = #b739ed
 keplerian = #ef2d56
 label_alpha = 0.9
 label_edgecolor = ${class}
@@ -60,7 +60,7 @@ xlim = -0.35 0.42 arcsec
 hlines = 35.7 km/s
 rms = 1.1 mJy/beam
 vmax = 20 mJy/beam
-label = PA=${paval}${deg} - $$\alpha = -0.58$$
+label = PA=${paval}${deg} - $$\alpha{=}-0.58$$
 
 [G11.92-0.61_alma3_pvedge]
 loc = 0 0
@@ -126,6 +126,8 @@ hlines = 37 km/s
 rms = 1.1 mJy/beam
 vmax = 20 mJy/beam
 label = PA=${paval}${deg}
+label_edgecolor = k
+label_font_color = k
 
 [G11.92-0.61_alma3_infall]
 loc = 0 1
