--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.6.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.6.cfg
@@ -59,7 +59,7 @@ pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra281.51574_dec-2.65622.P
 hlines = 97.25 km/s
 rms = 1.4 mJy/beam
 vmax = 45 mJy/beam
-label = PA=${paval}${deg} - $$\alpha = -0.77$$
+label = PA=${paval}${deg} - $$\alpha{=}-0.77$$
 
 [G29.96-0.02_alma1_pvedge]
 loc = 0 0
@@ -124,6 +124,8 @@ hlines = 97.25 km/s
 rms = 1.4 mJy/beam
 vmax = 45 mJy/beam
 label = PA=${paval}${deg} - Infall
+label_edgecolor = k
+label_font_color = k
 
 [G29.96-0.02_alma1_infall]
 loc = 0 1
