--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.7.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.7.cfg
@@ -43,7 +43,7 @@ basedir = ..
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
 # Colors
-class = #ed7d3a
+class = #b739ed
 keplerian = #ef2d56
 label_alpha = 0.9
 label_edgecolor = ${class}
@@ -60,7 +60,7 @@ xlim = -0.3 0.3 arcsec
 hlines = -58.47 km/s
 rms = 1.8 mJy/beam
 vmax = 27 mJy/beam
-label = PA=${paval}${deg} - $$\alpha = -0.56$$
+label = PA=${paval}${deg} - $$\alpha{=}-0.56$$
 
 [G333.12-0.56_alma1_pvedge]
 loc = 0 0
@@ -126,6 +126,8 @@ hlines = -58.47 km/s
 rms = 1.8 mJy/beam
 vmax = 27 mJy/beam
 label = PA=${paval}${deg}
+label_edgecolor = k
+label_font_color = k
 
 [G333.12-0.56_alma1_infall]
 loc = 0 1
