--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.9.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.9.cfg
@@ -60,7 +60,7 @@ xlim = -0.38 0.38 arcsec
 hlines = -87.04 km/s
 rms = 1.3 mJy/beam
 vmax = 22 mJy/beam
-label = PA=${paval}${deg} - $$\alpha = -1.2$$
+label = PA=${paval}${deg} - $$\alpha{=}-1.2$$
 
 [G333.23-0.06_alma3b_pvedge]
 loc = 0 0
@@ -126,6 +126,8 @@ hlines = -87.04 km/s
 rms = 1.3 mJy/beam
 vmax = 22 mJy/beam
 label = PA=${paval}${deg}
+label_edgecolor = k
+label_font_color = k
 
 [G333.23-0.06_alma3b_infall]
 loc = 0 1
