--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.1.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.1.cfg
@@ -59,7 +59,7 @@ pvmap = ${results}/${source}_alma${alma}_rotation.CH3CN_K3.ra272.61920_dec-19.93
 hlines = 0.851 km/s
 rms = 1.6 mJy/beam
 vmax = 32 mJy/beam
-label = PA=${paval}${deg} - $$\alpha = -1.2$$
+label = PA=${paval}${deg} - $$\alpha{=}-1.2$$
 
 [G10.62-0.38_alma1a_pvedge]
 loc = 0 0
@@ -124,6 +124,8 @@ hlines = 0.851 km/s
 rms = 1.6 mJy/beam
 vmax = 32 mJy/beam
 label = PA=${paval}${deg} - Infall
+label_edgecolor = k
+label_font_color = k
 
 [G10.62-0.38_alma1a_infall]
 loc = 0 1
