--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.10.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.10.cfg
@@ -61,7 +61,7 @@ ylim = -60 -30 km/s
 hlines = -43.55 km/s
 rms = 1.7 mJy/beam
 vmax = 45 mJy/beam
-label = PA=${paval}${deg} - $$\alpha = -0.8$$
+label = PA=${paval}${deg} - $$\alpha{=}-0.8$$
 
 [G333.46-0.16_alma1_pvedge]
 loc = 0 0
@@ -128,6 +128,8 @@ hlines = -43.55 km/s
 rms = 1.7 mJy/beam
 vmax = 45 mJy/beam
 label = PA=${paval}${deg}
+label_edgecolor = k
+label_font_color = k
 
 [G333.46-0.16_alma1_infall]
 loc = 0 1
