--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.14.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.14.cfg
@@ -59,7 +59,7 @@ pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra247.44723_dec-48.26452.
 hlines = -48.94 km/s
 rms = 1.6 mJy/beam
 vmax = 40 mJy/beam
-label = PA=${paval}${deg} - $$\alpha = -1.1$$
+label = PA=${paval}${deg} - $$\alpha{=}-1.1$$
 
 [G335.78+0.17_alma1_pvedge]
 loc = 0 0
@@ -124,6 +124,8 @@ hlines = -48.94 km/s
 rms = 1.6 mJy/beam
 vmax = 40 mJy/beam
 label = PA=${paval}${deg} - Infall
+label_edgecolor = k
+label_font_color = k
 
 [G335.78+0.17_alma1_infall]
 loc = 0 1
