--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.2.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.2.cfg
@@ -59,7 +59,7 @@ pvmap = ${results}/${source}_alma1c_rotation.CH3CN_K3.ra272.61971_dec-19.93040.P
 hlines = 0.851 km/s
 rms = 1.6 mJy/beam
 vmax = 25 mJy/beam
-label = PA=${paval}${deg} - $$\alpha = -1.0$$
+label = PA=${paval}${deg} - $$\alpha{=}-1.0$$
 
 [G10.62-0.38_alma1c_pvedge]
 loc = 0 0
@@ -124,6 +124,8 @@ hlines = 0.851 km/s
 rms = 1.6 mJy/beam
 vmax = 16 mJy/beam
 label = PA=${paval}${deg} - Outflow
+label_edgecolor = k
+label_font_color = k
 
 [G10.62-0.38_alma1c_infall]
 loc = 0 1
