--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.21.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.21.cfg
@@ -61,7 +61,7 @@ xlim = -0.52 0.52 arcsec
 hlines = 32.11 km/s
 rms = 2.5 mJy/beam
 vmax = 86 mJy/beam
-label = PA=${paval}${deg} - $$\alpha = -1.2$$
+label = PA=${paval}${deg} - $$\alpha{=}-1.2$$
 
 [G35.20-0.74_N_alma1_pvedge]
 loc = 0 0
@@ -128,6 +128,8 @@ hlines = 32.11 km/s
 rms = 2.5 mJy/beam
 vmax = 86 mJy/beam
 label = PA=${paval}${deg}
+label_edgecolor = k
+label_font_color = k
 
 [G35.20-0.74_N_alma1_infall]
 loc = 0 1
