--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.23.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.23.cfg
@@ -44,7 +44,7 @@ basedir = ..
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
 # Colors
-class = #ed7d3a
+class = #b739ed
 keplerian = #ef2d56
 label_alpha = 0.9
 label_edgecolor = ${class}
@@ -60,7 +60,7 @@ pvmap = ${results}/${source}_alma1_rotation.CH3CN_K3.ra272.96439_dec-17.52467.PA
 hlines = 32.88 km/s
 rms = 1.6 mJy/beam
 vmax = 52 mJy/beam
-label = PA=${paval}${deg} - $$\alpha = -0.48$$
+label = PA=${paval}${deg} - $$\alpha{=}-0.48$$
 
 [IRAS_180891732_alma1_pvedge]
 loc = 0 0
@@ -125,6 +125,8 @@ hlines = 32.88 km/s
 rms = 1.6 mJy/beam
 vmax = 52 mJy/beam
 label = PA=${paval}${deg} - Infall
+label_edgecolor = k
+label_font_color = k
 
 [IRAS_180891732_alma1_infall]
 loc = 0 1
