--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.25.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.25.cfg
@@ -44,7 +44,7 @@ basedir = ..
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
 # Colors
-class = #ed7d3a
+class = #b739ed
 keplerian = #ef2d56
 label_alpha = 0.9
 label_edgecolor = ${class}
@@ -61,7 +61,7 @@ xlim = -0.55 0.55 arcsec
 hlines = 47.0 km/s
 rms = 1.2 mJy/beam
 vmax = 30 mJy/beam
-label = PA=${paval}${deg} - $$\alpha = -0.34$$
+label = PA=${paval}${deg} - $$\alpha{=}-0.34$$
 
 [IRAS_181622048_alma1_pvedge]
 loc = 0 0
@@ -127,6 +127,8 @@ hlines = 47.0 km/s
 rms = 1.2 mJy/beam
 vmax = 30 mJy/beam
 label = PA=${paval}${deg}
+label_edgecolor = k
+label_font_color = k
 
 [IRAS_181622048_alma1_infall]
 loc = 0 1
