--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.28.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.28.cfg
@@ -59,7 +59,7 @@ pvmap = ${results}/${source}_alma4_rotation.HNCO_8.ra260.22153_dec-35.78310.PA${
 hlines = -6.92 km/s
 rms = 1.5 mJy/beam
 vmax = 50 mJy/beam
-label = PA=${paval}${deg} - $$\alpha = -1.3$$
+label = PA=${paval}${deg} - $$\alpha{=}-1.3$$
 
 [NGC6334I_alma4_pvedge]
 loc = 0 0
@@ -124,6 +124,8 @@ hlines = -6.92 km/s
 rms = 1.5 mJy/beam
 vmax = 50 mJy/beam
 label = PA=${paval}${deg}
+label_edgecolor = k
+label_font_color = k
 
 [NGC6334I_alma4_infall]
 loc = 0 1
