--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.29.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.29.cfg
@@ -43,7 +43,7 @@ basedir = ..
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
 # Colors
-class = #ed7d3a
+class = #b739ed
 keplerian = #ef2d56
 label_alpha = 0.9
 label_edgecolor = ${class}
@@ -60,7 +60,7 @@ pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra260.22996_dec-35.75110.
 hlines = -1.77 km/s
 rms = 1.7 mJy/beam
 vmax = 22 mJy/beam
-label = PA=${paval}${deg} - $$\alpha = -0.6$$
+label = PA=${paval}${deg} - $$\alpha{=}-0.6$$
 
 [NGC_6334_I_N_alma1_pvedge]
 loc = 0 0
@@ -126,6 +126,8 @@ hlines = -1.77 km/s
 rms = 1.7 mJy/beam
 vmax = 22 mJy/beam
 label = PA=${paval}${deg}
+label_edgecolor = k
+label_font_color = k
 
 [NGC_6334_I_N_alma1_infall]
 loc = 0 1
