--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.3.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.3.cfg
@@ -61,7 +61,7 @@ ylim = 20 40 km/s
 hlines = 31.85 km/s
 rms = 1.3 mJy/beam
 vmax = 15 mJy/beam
-label = PA=${paval}${deg} - $$\alpha = -3$$
+label = PA=${paval}${deg} - $$\alpha{=}-3$$
 
 [G11.1-0.12_alma1_pvedge]
 loc = 0 0
@@ -127,6 +127,8 @@ ylim = 20 40 km/s
 hlines = 31.85 km/s
 rms = 1.3 mJy/beam
 vmax = 15 mJy/beam
+label_edgecolor = k
+label_font_color = k
 
 [G11.1-0.12_alma1_infall]
 loc = 0 1
