--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.8.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.8.cfg
@@ -2,11 +2,11 @@
 ncols = 2
 nrows = 1
 sharex = false
-sharey = false
+sharey = true
 styles = maps lipari_r aspect_auto 
 vertical_cbar = false
 horizontal_cbar = true
-left = 0.8
+left = 1.0
 right = 0.2
 top = 0.6
 bottom = 0.5
