--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.3.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.3.cfg
@@ -2,15 +2,15 @@
 ncols = 2
 nrows = 1
 sharex = false
-sharey = false
+sharey = true
 styles = maps lipari_r aspect_auto
 vertical_cbar = false
 horizontal_cbar = true
-left = 0.8
+left = 0.85
 right = 0.2
 top = 0.6
 bottom = 0.5
-hspace = 0.2
+hspace = 0.5
 cbar_spacing = 0.1
 labelpad = 5
 label_xpad = 0.45
