Change figure3 plots

--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig3.15.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig3.15.cfg
@@ -2,16 +2,15 @@
 ncols = 2
 nrows = 1
 sharex = false
-sharey = false
-styles = maps inferno aspect_auto thick_border
-#styles = maps lipari aspect_auto thick_border
+sharey = true
+styles = maps lipari_r aspect_auto 
 vertical_cbar = false
 horizontal_cbar = true
-left = 0.8
+left = 0.85
 right = 0.2
 top = 0.6
 bottom = 0.5
-hspace = 0.2
+hspace = 0.5
 cbar_spacing = 0.1
 labelpad = 5
 label_xpad = 0.45
@@ -24,24 +23,31 @@ name = Intensity
 unit = mJy/beam
 stretch = linear
 nsigma = 3
-contour_linewidth = 0.5
-contour_stretch = log
 xticks_fmt = {x:.1f}
 yticks_fmt = {x:.0f}
 inverty = true
-ticks_color = w
-label = ${source} ALMAe${almae} PA=${paval}${deg}
+ticks_color = k
+enumerate = false
 label_position = 0.03 0.92
 vlines = 0 arcsec
 vlines_linestyle = :
-vlines_color = #35ff2c
+vlines_color = #adacac
 hlines_linestyle = --
-hlines_color = #35ff2c
+hlines_color = #adacac
 self_contours = true
+contour_linewidth = 0.5
+contour_stretch = log
+contour_colors = #494a49
 vmin = 0. mJy/beam
 basedir = ..
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
+# Colors
+class = k
+label_alpha = 0.9
+label_edgecolor = ${class}
+label_font_color = ${class}
+label = PA=${paval}${deg}
 
 [NGC6334IN_alma2_pvmap_rot]
 loc = 0 0
@@ -49,9 +55,10 @@ source = NGC_6334_I_N
 alma = 2
 almae = 1
 paval = -55
-label = NGC 6334I(N) ALMAe${almae} PA=${paval}${deg}
+#label = NGC 6334I(N) ALMAe${almae} PA=${paval}${deg}
 pvmap = ${results}/${source}_alma2_rotation.CH3OH_spw0.ra260.22747_dec-35.75482.PA${paval}.fits
 xlim = -0.3 0.3 arcsec
+ylim = -15 10 km/s
 hlines = -3.9 km/s
 rms = 1.5 mJy/beam
 vmax = 16 mJy/beam
@@ -68,7 +75,7 @@ source = NGC_6334_I_N
 alma = 2
 almae = 1
 paval = 35
-label = NGC 6334I(N) ALMAe${almae} PA=${paval}${deg}
+#label = NGC 6334I(N) ALMAe${almae} PA=${paval}${deg}
 pvmap = ${results}/${source}_alma2_rotation.CH3OH_spw0.ra260.22747_dec-35.75482.PA${paval}.fits
 xlim = -0.3 0.3 arcsec
 ylim = -15 10 km/s
