--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig3.10.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig3.10.cfg
@@ -2,16 +2,15 @@
 ncols = 2
 nrows = 1
 sharex = false
-sharey = false
-styles = maps inferno aspect_auto thick_border
-#styles = maps lipari aspect_auto thick_border
+sharey = true
+styles = maps lipari_r aspect_auto 
 vertical_cbar = false
 horizontal_cbar = true
-left = 0.8
+left = 0.85
 right = 0.2
 top = 0.6
 bottom = 0.5
-hspace = 0.2
+hspace = 0.5
 cbar_spacing = 0.1
 labelpad = 5
 label_xpad = 0.45
@@ -24,24 +23,31 @@ name = Intensity
 unit = mJy/beam
 stretch = linear
 nsigma = 3
-contour_linewidth = 0.5
-contour_stretch = log
 xticks_fmt = {x:.1f}
 yticks_fmt = {x:.0f}
 inverty = true
-ticks_color = w
-label = ${source} ALMAe${almae} PA=${paval}${deg}
+ticks_color = k
+enumerate = false
 label_position = 0.03 0.92
 vlines = 0 arcsec
 vlines_linestyle = :
-vlines_color = #35ff2c
+vlines_color = #adacac
 hlines_linestyle = --
-hlines_color = #35ff2c
+hlines_color = #adacac
 self_contours = true
+contour_linewidth = 0.5
+contour_stretch = log
+contour_colors = #494a49
 vmin = 0. mJy/beam
 basedir = ..
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
+# Colors
+class = k
+label_alpha = 0.9
+label_edgecolor = ${class}
+label_font_color = ${class}
+label = PA=${paval}${deg}
 
 [I16562_alma2_pvmap_rot]
 loc = 0 0
@@ -49,7 +55,7 @@ source = IRAS_165623959
 alma = 2
 almae = 4
 paval = 225
-label = IRAS 16562-3959 ALMAe${almae} PA=${paval}${deg}
+#label = IRAS 16562-3959 ALMAe${almae} PA=${paval}${deg}
 pvmap = ${results}/${source}_alma2_rotation.CH3CN_K3.ra254.92120_dec-40.06086.PA${paval}.fits
 xlim = -0.23 0.23 arcsec
 hlines = -11.65 km/s
@@ -68,7 +74,7 @@ source = IRAS_165623959
 alma = 2
 almae = 4
 paval = 315
-label = IRAS 16562-3959 ALMAe${almae} PA=${paval}${deg}
+#label = IRAS 16562-3959 ALMAe${almae} PA=${paval}${deg}
 pvmap = ${results}/${source}_alma2_rotation.CH3CN_K3.ra254.92120_dec-40.06086.PA${paval}.fits
 xlim = -0.23 0.23 arcsec
 hlines = -11.65 km/s
