--- a/configs/plots/papers/group_pv_maps.13.cfg
+++ b/configs/plots/papers/group_pv_maps.13.cfg
@@ -3,7 +3,7 @@ ncols = 1
 nrows = 3
 sharex = false
 sharey = false
-styles = maps inferno aspect_auto
+styles = maps lipari_r aspect_auto 
 vertical_cbar = false
 horizontal_cbar = true
 left = 0.8
@@ -15,7 +15,6 @@ cbar_spacing = 0.1
 labelpad = 5
 label_xpad = 0.45
 label_ypad = -0.7
-label_position = 0.03 0.92
 xunit = arcsec
 yunit = km/s
 xname = Offset
@@ -24,22 +23,30 @@ name = Intensity
 unit = mJy/beam
 stretch = linear
 nsigma = 3
-contour_linewidth = 0.5
-contour_stretch = log
 xticks_fmt = {x:.1f}
 yticks_fmt = {x:.0f}
 inverty = true
-ticks_color = w
+ticks_color = k
+label_position = 0.03 0.92
 vlines = 0 arcsec
 vlines_linestyle = :
-vlines_color = #35ff2c
+vlines_color = #adacac
 hlines_linestyle = --
-hlines_color = #35ff2c
+hlines_color = #adacac
 self_contours = true
+contour_linewidth = 0.5
+contour_stretch = log
+contour_colors = #494a49
 vmin = 0. mJy/beam
 basedir = ..
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
+# Colors
+class = #8cd867
+keplerian = #ef2d56
+label_alpha = 0.9
+label_edgecolor = k
+label_font_color = k
 
 [G333.12_alma1_pvmap_rot]
 loc = 0 0
@@ -53,12 +60,16 @@ xlim = -0.3 0.3 arcsec
 hlines = -58.47 km/s
 rms = 1.8 mJy/beam
 vmax = 27 mJy/beam
+texts = 0.1 arcsec -75 km/s
+texts_text = $$\alpha{=}-0.7$$
+texts_physframe = data
+texts_color = ${class}
 
 [G333.12-0.56_alma1_pvedge]
 loc = 0 0
 structured_array = ../results/G333.12-0.56/c5c8/per_hot_core/alma1_pvmaps/G333.12-0.56_alma1_rotation.CH3CN_K3.ra245.39740_dec-50.68239.PA135.edge.dat
 marker = o
-color = #46eff2
+color = ${contour_colors}
 linestyle = none
 plot_keys = OFFSET, VRAD
 
@@ -69,7 +80,7 @@ xrange = -0.4950000000000396 0.4950000000000396 arcsec
 yunit = km/s
 sampling = 500
 linestyle = --
-color = #eb5252
+color = ${keplerian}
 model_mass = 20.42532027607212 solMass
 model_sd_mass = 1.6417204465177493 solMass
 model_amplitude = -13.461006952396081
@@ -92,7 +103,7 @@ xrange = -0.4950000000000396 0.4950000000000396 arcsec
 yunit = km/s
 sampling = 500
 linestyle = -
-color = #adacac
+color = ${class}
 model_amplitude = -17.35576518186187
 model_x_0 = 0.030303030303030304
 model_alpha = 0.697699831280067
@@ -125,6 +136,10 @@ markers_marker = v, ^
 markers_mec = #46eff2
 markers_mfc = #46eff2
 markers_ms = 10
+texts = 0.2 arcsec -57 km/s
+texts_text = $$\alpha{=}-0.8$$
+texts_physframe = data
+texts_color = ${class}
 
 [G333.46_alma1_pvmap_ch3cn]
 loc = 2 0
@@ -145,6 +160,10 @@ markers_marker = v, ^
 markers_mec = #46eff2
 markers_mfc = #46eff2
 markers_ms = 10
+texts = 0.2 arcsec -57 km/s
+texts_text = $$\alpha{=}-0.8$$
+texts_physframe = data
+texts_color = ${class}
 
 [G333.46-0.16_alma1_unrestricted_fit]
 loc = 1 0, 2 0
@@ -153,7 +172,7 @@ xrange = -0.9900000000000792 0.9900000000000792 arcsec
 yunit = km/s
 sampling = 500
 linestyle = -
-color = #adacac
+color = #8cd867
 model_amplitude = -9.66389486517509
 model_x_0 = 0.034482758620689655
 model_alpha = 0.7755267109594368
