Update ALMAe numbering

--- a/configs/plots/papers/figsets/dihca6_moments_fig1.18.cfg
+++ b/configs/plots/papers/figsets/dihca6_moments_fig1.18.cfg
@@ -56,6 +56,8 @@ arrows_linewidth = 3
 # Non-standard
 basedir = ../
 contdir = ${basedir}/source_data/continuum
+label_alpha = 0.9
+label_edgecolor = k
 
 [G335.78_alma2_moment1]
 loc = 0 0
@@ -63,7 +65,8 @@ source = G335.78+0.17
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma2_moments
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width40.subcube.moment1.fits
 shift_data = 50.51 km/s
-label = ${source} ALMAe2 CH$$_3$$OH
+#label = ${source} ALMAe2 CH$$_3$$OH
+label = CH$$_3$$OH
 # Range
 vmin = -6 km/s
 vmax = 6 km/s
