--- a/configs/plots/papers/figsets/dihca6_moments_fig1.25.cfg
+++ b/configs/plots/papers/figsets/dihca6_moments_fig1.25.cfg
@@ -56,6 +56,8 @@ arrows_linewidth = 3
 # Non-standard
 basedir = ../
 contdir = ${basedir}/source_data/continuum
+label_alpha = 0.9
+label_edgecolor = k
 
 [G35.13_alma6_moment1]
 loc = 0 0
@@ -65,7 +67,8 @@ source = G35.13-0.74
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma6_moments
 image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
 shift_data = -35.53 km/s
-label = ${source} ALMAe6 CH$$_3$$CN
+#label = ${source} ALMAe7 CH$$_3$$CN
+label = CH$$_3$$CN
 # Range
 vmin = -4 km/s
 vmax = 4 km/s
