--- a/configs/plots/papers/figsets/dihca6_moments_fig1.26.cfg
+++ b/configs/plots/papers/figsets/dihca6_moments_fig1.26.cfg
@@ -56,6 +56,8 @@ arrows_linewidth = 3
 # Non-standard
 basedir = ../
 contdir = ${basedir}/source_data/continuum
+label_alpha = 0.9
+label_edgecolor = k
 
 [G35.20_alma1_moment1]
 loc = 0 0
@@ -64,7 +66,8 @@ results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
 shift_data = -32.11 km/s
 #shift_data = -30.3 km/s
-label = G35.20-0.74 N ALMAe1 CH$$_3$$OH
+#label = G35.20-0.74 N ALMAe1 CH$$_3$$OH
+label = CH$$_3$$OH
 # Range
 vmin = -3 km/s
 vmax = 3 km/s
