--- a/configs/plots/papers/figsets/dihca6_moments_fig1.34.cfg
+++ b/configs/plots/papers/figsets/dihca6_moments_fig1.34.cfg
@@ -56,6 +56,8 @@ arrows_linewidth = 3
 # Non-standard
 basedir = ../
 contdir = ${basedir}/source_data/continuum
+label_alpha = 0.9
+label_edgecolor = k
 
 [IRAS18162_alma1_moment1]
 loc = 0 0
@@ -65,7 +67,8 @@ source = IRAS_181622048
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
 image = ${results}/c-HCOOH_10_4_6_-9_4_5__width30.subcube.moment1.fits
 shift_data = -45.69 km/s
-label = IRAS 18162-2048 ALMAe1 c-HCOOH
+#label = IRAS 18162-2048 ALMAe1 c-HCOOH
+label = c-HCOOH
 # Range
 vmin = -6 km/s
 vcenter = 0 km/s
