--- a/configs/plots/papers/figsets/dihca6_moments_fig1.42.cfg
+++ b/configs/plots/papers/figsets/dihca6_moments_fig1.42.cfg
@@ -56,6 +56,8 @@ arrows_linewidth = 3
 # Non-standard
 basedir = ../
 contdir = ${basedir}/source_data/continuum
+label_alpha = 0.9
+label_edgecolor = k
 
 [NGC6334IN_alma2_moment1]
 loc = 0 0
@@ -64,7 +66,8 @@ results = ${basedir}/results/${source}/c5c8/per_hot_core/alma2_moments
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
 shift_data = 3.9 km/s
 #shift_data = -0.74 km/s
-label = NGC 6334I(N) ALMAe1 CH$$_3$$OH
+#label = NGC 6334I(N) ALMAe1 CH$$_3$$OH
+label = CH$$_3$$OH
 # Range
 vmin = -5 km/s
 vmax = 5 km/s
