--- a/configs/plots/papers/figsets/dihca6_moments_fig1.44.cfg
+++ b/configs/plots/papers/figsets/dihca6_moments_fig1.44.cfg
@@ -56,6 +56,8 @@ arrows_linewidth = 3
 # Non-standard
 basedir = ../
 contdir = ${basedir}/source_data/continuum
+label_alpha = 0.9
+label_edgecolor = k
 
 [NGC6334IN_alma6_moment1]
 loc = 0 0
@@ -63,7 +65,8 @@ source = NGC_6334_I_N
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma6_moments
 image = ${results}/CH3CN_12_3_-11_3__width40.subcube.moment1.fits
 shift_data = 7.2 km/s
-label = NGC 6334I(N) ALMAe4 CH$$_3$$OH
+#label = NGC 6334I(N) ALMAe8 CH$$_3$$OH
+label = CH$$_3$$OH
 # Range
 vmin = -8 km/s
 vmax = 8 km/s
