--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.16.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.16.cfg
@@ -53,7 +53,8 @@ label_font_color = ${class}
 loc = 0 0
 source = G336.01-0.82
 alma = 1
-almae = 2
+#almae = 2
+almae = 3
 paval = 125
 pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra248.78858_dec-48.77991.PA${paval}.fits
 hlines = -47.2 km/s
