--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig3.10.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig3.10.cfg
@@ -53,7 +53,8 @@ label = PA=${paval}${deg}
 loc = 0 0
 source = IRAS_165623959
 alma = 2
-almae = 4
+#almae = 4
+almae = 5
 paval = 225
 #label = IRAS 16562-3959 ALMAe${almae} PA=${paval}${deg}
 pvmap = ${results}/${source}_alma2_rotation.CH3CN_K3.ra254.92120_dec-40.06086.PA${paval}.fits
