--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig3.13.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig3.13.cfg
@@ -53,7 +53,8 @@ label = PA=${paval}${deg}
 loc = 0 0
 source = IRAS_18182-1433
 alma = 5
-almae = 10
+#almae = 10
+almae = 11
 paval = 40
 #label = IRAS 18182-1433 ALMAe${almae} PA=${paval}${deg}
 pvmap = ${results}/${source}_alma5_rotation.CH3CN_K3.ra275.28757_dec-14.52998.PA${paval}.fits
