--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig3.14.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig3.14.cfg
@@ -53,7 +53,8 @@ label = PA=${paval}${deg}
 loc = 0 0
 source = NGC6334I
 alma = 8
-almae = 2
+#almae = 2
+almae = 3
 paval = 50
 pvmap = ${results}/${source}_alma8_rotation.CH3OH_spw0.ra260.22352_dec-35.78191.PA${paval}.fits
 xlim = -0.2 0.2 arcsec
