--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig3.16.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig3.16.cfg
@@ -53,7 +53,8 @@ label = PA=${paval}${deg}
 loc = 0 0
 source = NGC_6334_I_N
 alma = 11
-almae = 13
+#almae = 13
+almae = 14
 paval = 160
 #label = NGC 6334I(N) ALMAe${almae} PA=${paval}${deg}
 pvmap = ${results}/${source}_alma11_rotation.CH3CN_K3.ra260.22849_dec-35.75168.PA${paval}.fits
