--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig3.2.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig3.2.cfg
@@ -53,7 +53,8 @@ label = PA=${paval}${deg}
 loc = 0 0
 source = G11.92-0.61
 alma = 1b
-almae = 5
+#almae = 5
+almae = 6
 paval = -15
 pvmap = ${results}/${source}_alma${alma}_rotation.CH3CN_K3.ra273.49220_dec-18.90576.PA${paval}.fits
 xlim = -0.3 0.3 arcsec
