--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig3.3.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig3.3.cfg
@@ -53,7 +53,8 @@ label = PA=${paval}${deg}
 loc = 0 0
 source = G14.22-0.50_S
 alma = 1
-almae = 2
+#almae = 2
+almae = 3
 paval = 170
 pvmap = ${results}/${source}_alma${alma}_rotation.CH3OH_spw0.ra274.55359_dec-16.95566.PA${paval}.fits
 xlim = -0.1 0.1 arcsec
