--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig3.6.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig3.6.cfg
@@ -53,6 +53,7 @@ label = PA=${paval}${deg}
 loc = 0 0
 source = G35.13-0.74
 alma = 6
+almae = 7
 paval = 95
 pvmap = ${results}/${source}_alma6_rotation.CH3CN_K3.ra284.52617_dec1.61867.PA${paval}.fits
 xlim = -0.25 0.25 arcsec
