--- a/configs/plots/papers/figsets/dihca6_moments_fig1.12.cfg
+++ b/configs/plots/papers/figsets/dihca6_moments_fig1.12.cfg
@@ -56,6 +56,8 @@ arrows_linewidth = 3
 # Non-standard
 basedir = ../
 contdir = ${basedir}/source_data/continuum
+label_alpha = 0.9
+label_edgecolor = k
 
 [G333.23_alma3_moment1]
 loc = 0 0
@@ -64,7 +66,8 @@ results = ${basedir}/results/${source}/c5c8/per_hot_core/alma3_moments
 image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
 shift_data = 87.04 km/s
 #label = ${source} ALMA3 CH$$_3$$CN
-label = ${source} CH$$_3$$CN
+#label = ${source} CH$$_3$$CN
+label = CH$$_3$$CN
 # Range
 vmin = -4 km/s
 vmax = 4 km/s
@@ -83,7 +86,7 @@ arrows_ls = --, --, -, -
 arrows_style = -, -, -> , ->
 arrows_pa = 133 deg, 221 deg, 220 deg, 125 deg
 texts = 16h19m50.905s -50d15m10.53s icrs, 16h19m50.875s -50d15m10.61s icrs
-texts_text = ALMAe5, ALMAe14
+texts_text = ALMAe6, ALMAe17
 
 [G333.23_alma3_continuum]
 loc = 0 0
