--- a/configs/plots/papers/figsets/dihca6_moments_fig1.13.cfg
+++ b/configs/plots/papers/figsets/dihca6_moments_fig1.13.cfg
@@ -56,6 +56,8 @@ arrows_linewidth = 3
 # Non-standard
 basedir = ../
 contdir = ${basedir}/source_data/continuum
+label_alpha = 0.9
+label_edgecolor = k
 
 [G333.46_alma1_moment1]
 loc = 0 0
@@ -65,7 +67,8 @@ results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
 image = ${results}/HNCO_10_0_10_-9_0_9__width30.subcube.moment1.fits
 shift_data = 43.55 km/s
 #label = ${source} ALMA1 CH$$_3$$OH
-label = ${source} ALMAe1 HNCO
+#label = ${source} ALMAe1 HNCO
+label = HNCO
 # Range
 vmin = -3 km/s
 vmax = 3 km/s
