--- a/configs/plots/papers/figsets/dihca6_moments_fig1.16.cfg
+++ b/configs/plots/papers/figsets/dihca6_moments_fig1.16.cfg
@@ -56,6 +56,8 @@ arrows_linewidth = 3
 # Non-standard
 basedir = ../
 contdir = ${basedir}/source_data/continuum
+label_alpha = 0.9
+label_edgecolor = k
 
 [G335.579_alma3_moment1]
 loc = 0 0
@@ -65,7 +67,8 @@ source = G335.579-0.272
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma3_moments
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width40.subcube.moment1.fits
 shift_data = 53.1 km/s
-label = ${source} ALMAe4 CH$$_3$$OH
+#label = ${source} ALMAe4 CH$$_3$$OH
+label = CH$$_3$$OH
 # Range
 vmin = -12 km/s
 vmax = 12 km/s
