--- a/configs/plots/papers/figsets/dihca6_moments_fig1.21.cfg
+++ b/configs/plots/papers/figsets/dihca6_moments_fig1.21.cfg
@@ -56,6 +56,8 @@ arrows_linewidth = 3
 # Non-standard
 basedir = ../
 contdir = ${basedir}/source_data/continuum
+label_alpha = 0.9
+label_edgecolor = k
 
 [G343_alma1_moment1]
 loc = 0 0
@@ -63,7 +65,8 @@ source = G343.12-0.06
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width20.subcube.moment1.fits
 shift_data = 33.71 km/s
-label = ${source} ALMAe1 CH$$_3$$OH
+#label = ${source} ALMAe1 CH$$_3$$OH
+label = CH$$_3$$OH
 # Range
 vmin = -5 km/s
 vmax = 5 km/s
