--- a/configs/plots/papers/figsets/dihca6_moments_fig1.22.cfg
+++ b/configs/plots/papers/figsets/dihca6_moments_fig1.22.cfg
@@ -56,6 +56,8 @@ arrows_linewidth = 3
 # Non-standard
 basedir = ../
 contdir = ${basedir}/source_data/continuum
+label_alpha = 0.9
+label_edgecolor = k
 
 [G35.03_alma1_moment1]
 loc = 0 0
@@ -63,7 +65,8 @@ source = G35.03+0.35_A
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
 image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
 shift_data = -45.94 km/s
-label = G35.03+0.35 A ALMAe1 CH$$_3$$CN
+#label = G35.03+0.35 A ALMAe1 CH$$_3$$CN
+label = CH$$_3$$CN
 # Range
 vmin = -8 km/s
 vmax = 8 km/s
