--- a/configs/plots/papers/figsets/dihca6_moments_fig1.27.cfg
+++ b/configs/plots/papers/figsets/dihca6_moments_fig1.27.cfg
@@ -56,6 +56,8 @@ arrows_linewidth = 3
 # Non-standard
 basedir = ../
 contdir = ${basedir}/source_data/continuum
+label_alpha = 0.9
+label_edgecolor = k
 
 [G35.20_alma2_moment1]
 loc = 0 0
@@ -63,7 +65,8 @@ source = G35.20-0.74_N
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma2_moments
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
 shift_data = -30.0 km/s
-label = G35.20-0.74 N ALMAe2 CH$$_3$$OH
+#label = G35.20-0.74 N ALMAe2 CH$$_3$$OH
+label = CH$$_3$$OH
 # Range
 vmin = -3 km/s
 vmax = 3 km/s
