--- a/configs/plots/papers/figsets/dihca6_moments_fig1.33.cfg
+++ b/configs/plots/papers/figsets/dihca6_moments_fig1.33.cfg
@@ -56,6 +56,8 @@ arrows_linewidth = 3
 # Non-standard
 basedir = ../
 contdir = ${basedir}/source_data/continuum
+label_alpha = 0.9
+label_edgecolor = k
 
 [I18089_alma3_moment1]
 loc = 0 0
@@ -63,7 +65,8 @@ source = IRAS_180891732
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma3_moments
 image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
 shift_data = -33.02 km/s
-label = IRAS 18089-1732 ALMAe2 CH$$_3$$CN
+#label = IRAS 18089-1732 ALMAe2 CH$$_3$$CN
+label = CH$$_3$$CN
 # Range
 vmin = -5 km/s
 vmax = 5 km/s
