--- a/configs/plots/papers/figsets/dihca6_moments_fig1.39.cfg
+++ b/configs/plots/papers/figsets/dihca6_moments_fig1.39.cfg
@@ -56,6 +56,8 @@ arrows_linewidth = 3
 # Non-standard
 basedir = ../
 contdir = ${basedir}/source_data/continuum
+label_alpha = 0.9
+label_edgecolor = k
 
 [NGC6334I_alma1_moment1]
 loc = 0 0
@@ -65,7 +67,8 @@ results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
 image = ${results}/HNCO_10_3_8_-9_3_7__width30.subcube.moment1.fits
 shift_data = 8.0 km/s
 #label = NGC 6334I ALMA1 CH$$_3$$OH
-label = NGC 6334I ALMAe1 HNCO
+#label = NGC 6334I ALMAe1 HNCO
+label = HNCO
 # Range
 vmin = -6 km/s
 vmax = 6 km/s
