--- a/configs/plots/papers/figsets/dihca6_moments_fig1.40.cfg
+++ b/configs/plots/papers/figsets/dihca6_moments_fig1.40.cfg
@@ -56,6 +56,8 @@ arrows_linewidth = 3
 # Non-standard
 basedir = ../
 contdir = ${basedir}/source_data/continuum
+label_alpha = 0.9
+label_edgecolor = k
 
 [NGC6334I_alma8_moment1]
 loc = 0 0
@@ -63,7 +65,8 @@ source = NGC6334I
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma8_moments
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
 shift_data = 4.7 km/s
-label = NGC 6334I ALMAe2 CH$$_3$$OH
+#label = NGC 6334I ALMAe3 CH$$_3$$OH
+label = CH$$_3$$OH
 # Range
 vmin = -3 km/s
 vmax = 3 km/s
