--- a/configs/plots/papers/figsets/dihca6_moments_fig1.41.cfg
+++ b/configs/plots/papers/figsets/dihca6_moments_fig1.41.cfg
@@ -56,6 +56,8 @@ arrows_linewidth = 3
 # Non-standard
 basedir = ../
 contdir = ${basedir}/source_data/continuum
+label_alpha = 0.9
+label_edgecolor = k
 
 [NGC6334I_alma4_moment1]
 loc = 0 0
@@ -66,7 +68,8 @@ image = ${results}/HNCO_10_3_8_-9_3_7__width30.subcube.moment1.fits
 #shift_data = 10.7 km/s
 shift_data = 6.92 km/s
 #label = NGC 6334I ALMA4 CH$$_3$$OH
-label = NGC 6334I ALMAe3 HNCO
+#label = NGC 6334I ALMAe4 HNCO
+label = HNCO
 # Range
 vmin = -6 km/s
 vmax = 6 km/s
