--- a/configs/plots/papers/figsets/dihca6_moments_fig1.43.cfg
+++ b/configs/plots/papers/figsets/dihca6_moments_fig1.43.cfg
@@ -56,6 +56,8 @@ arrows_linewidth = 3
 # Non-standard
 basedir = ../
 contdir = ${basedir}/source_data/continuum
+label_alpha = 0.9
+label_edgecolor = k
 
 [NGC6334IN_alma1_moment1]
 loc = 0 0
@@ -65,7 +67,8 @@ source = NGC_6334_I_N
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
 shift_data = 1.77 km/s
-label = NGC 6334I(N) ALMAe2 CH$$_3$$OH
+#label = NGC 6334I(N) ALMAe2 CH$$_3$$OH
+label = CH$$_3$$OH
 # Range
 vmin = -8 km/s
 vmax = 8 km/s
