--- a/configs/plots/papers/figsets/dihca6_moments_fig1.45.cfg
+++ b/configs/plots/papers/figsets/dihca6_moments_fig1.45.cfg
@@ -56,6 +56,8 @@ arrows_linewidth = 3
 # Non-standard
 basedir = ../
 contdir = ${basedir}/source_data/continuum
+label_alpha = 0.9
+label_edgecolor = k
 
 [NGC6334IN_alma4_moment1]
 loc = 0 0
@@ -63,7 +65,8 @@ source = NGC_6334_I_N
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma4_moments
 image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
 shift_data = 6.7 km/s
-label = NGC 6334I(N) ALMAe5 CH$$_3$$CN
+#label = NGC 6334I(N) ALMAe9 CH$$_3$$CN
+label = CH$$_3$$CN
 # Range
 vmin = -6 km/s
 vmax = 6 km/s
