--- a/configs/plots/papers/figsets/dihca6_moments_fig1.47.cfg
+++ b/configs/plots/papers/figsets/dihca6_moments_fig1.47.cfg
@@ -56,6 +56,8 @@ arrows_linewidth = 3
 # Non-standard
 basedir = ../
 contdir = ${basedir}/source_data/continuum
+label_alpha = 0.9
+label_edgecolor = k
 
 [W33A_alma1a_moment1]
 loc = 0 0
@@ -63,7 +65,8 @@ source = W33A
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1a_moments
 image = ${results}/CH3CN_12_3_-11_3__width30.subcube.moment1.fits
 shift_data = -37.9 km/s
-label = W33A ALMAe1 CH$$_3$$CN
+#label = W33A ALMAe1 CH$$_3$$CN
+label = CH$$_3$$CN
 # Range
 vmin = -6 km/s
 vmax = 6 km/s
