--- a/configs/plots/papers/figsets/dihca6_moments_fig1.6.cfg
+++ b/configs/plots/papers/figsets/dihca6_moments_fig1.6.cfg
@@ -56,6 +56,8 @@ arrows_linewidth = 3
 # Non-standard
 basedir = ../
 contdir = ${basedir}/source_data/continuum
+label_alpha = 0.9
+label_edgecolor = k
 
 [G11.92_alma3_moment1]
 loc = 0 0
@@ -67,7 +69,8 @@ source = G11.92-0.61
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma3_moments
 image = ${results}/CH3CN_12_3_-11_3__width24.subcube.moment1.fits
 shift_data = -35.7 km/s
-label = ${source} ALMAe4 CH$$_3$$CN
+#label = ${source} ALMAe4 CH$$_3$$CN
+label = CH$$_3$$CN
 # Range
 vmin = -6 km/s
 vmax = 6 km/s
