--- a/configs/plots/papers/figsets/dihca6_moments_fig1.7.cfg
+++ b/configs/plots/papers/figsets/dihca6_moments_fig1.7.cfg
@@ -56,6 +56,8 @@ arrows_linewidth = 3
 # Non-standard
 basedir = ../
 contdir = ${basedir}/source_data/continuum
+label_alpha = 0.9
+label_edgecolor = k
 
 [G11.92_alma1b_moment1]
 loc = 0 0
@@ -63,7 +65,8 @@ source = G11.92-0.61
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1b_moments
 image = ${results}/CH3CN_12_3_-11_3__width24.subcube.moment1.fits
 shift_data = -37 km/s
-label = ${source} ALMAe5 CH$$_3$$CN
+#label = ${source} ALMAe6 CH$$_3$$CN
+label = CH$$_3$$CN
 # Range
 vmin = -4 km/s
 vmax = 4 km/s
