--- a/configs/plots/papers/figsets/dihca6_moments_fig1.8.cfg
+++ b/configs/plots/papers/figsets/dihca6_moments_fig1.8.cfg
@@ -56,6 +56,8 @@ arrows_linewidth = 3
 # Non-standard
 basedir = ../
 contdir = ${basedir}/source_data/continuum
+label_alpha = 0.9
+label_edgecolor = k
 
 [G14.22-0.50_S_alma1_moment1]
 loc = 0 0
@@ -63,7 +65,8 @@ source = G14.22-0.50_S
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma1_moments
 image = ${results}/CH3OH_18_3_15_-17_4_14_A_vt_0_width30.subcube.moment1.fits
 shift_data = -19.61 km/s
-label = G14.22-0.50 S ALMAe2 CH$$_3$$OH
+#label = G14.22-0.50 S ALMAe3 CH$$_3$$OH
+label = CH$$_3$$OH
 # Range
 vmin = -6 km/s
 vmax = 6 km/s
