--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.30.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.30.cfg
@@ -53,7 +53,8 @@ label_font_color = ${class}
 loc = 0 0
 source = NGC_6334_I_N
 alma = 6
-almae = 4
+#almae = 4
+almae = 8
 paval = 130
 #label = NGC 6334I(N) ALMAe${almae} PA=${paval}${deg}
 pvmap = ${results}/${source}_alma6_rotation.CH3CN_K3.ra260.22758_dec-35.75241.PA${paval}.fits
