--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.31.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.31.cfg
@@ -53,7 +53,8 @@ label_font_color = ${class}
 loc = 0 0
 source = NGC_6334_I_N
 alma = 4
-almae = 5
+#almae = 5
+almae = 9
 paval = 130
 #label = NGC 6334I(N) ALMAe${almae} PA=${paval}${deg}
 pvmap = ${results}/${source}_alma4_rotation.CH3CN_K3.ra260.22863_dec-35.75179.PA${paval}.fits
