--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.8.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.8.cfg
@@ -53,7 +53,8 @@ label_font_color = ${class}
 loc = 0 0
 source = G333.23-0.06
 alma = 3
-almae = 5
+#almae = 5
+almae = 6
 paval = 220
 pvmap = ${results}/${source}_alma3_rotation.CH3CN_K3.ra244.96202_dec-50.25292.PA${paval}.fits
 xlim = -0.4 0.4 arcsec
