--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.9.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.9.cfg
@@ -53,7 +53,8 @@ label_font_color = ${class}
 loc = 0 0
 source = G333.23-0.06
 alma = 3b
-almae = 14
+#almae = 14
+almae = 17
 paval = 125
 pvmap = ${results}/${source}_alma3b_rotation.CH3CN_K3.ra244.96199_dec-50.25295.PA${paval}.fits
 xlim = -0.38 0.38 arcsec
