--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig3.4.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig3.4.cfg
@@ -53,7 +53,8 @@ label = PA=${paval}${deg}
 loc = 0 0
 source = G333.12-0.56
 alma = 2
-almae = 6
+#almae = 6
+almae = 8
 paval = 90
 pvmap = ${results}/${source}_alma2_rotation.CH3CN_K3.ra245.40106_dec-50.67979.PA${paval}.fits
 xlim = -0.38 0.16 arcsec
