Change borders and small fixes

--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig3.3.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig3.3.cfg
@@ -7,7 +7,7 @@ styles = maps lipari_r aspect_auto
 vertical_cbar = false
 horizontal_cbar = true
 left = 0.85
-right = 0.2
+right = 0.3
 top = 0.6
 bottom = 0.5
 hspace = 0.5
@@ -62,11 +62,12 @@ ylim = 10 30 km/s
 hlines = 19.61 km/s
 rms = 1.3 mJy/beam
 vmax = 15 mJy/beam
-label = G14.22-0.50 S ALMAe${almae} PA=${paval}${deg}
+#label = G14.22-0.50 S ALMAe${almae} PA=${paval}${deg}
 markers = -0.048 arcsec 15.7 km/s, 0.045 arcsec 23.9 km/s
 markers_physframe = data
 markers_marker = ^, v
 markers_mec = #46eff2
+markers_mfc = #46eff2
 markers_ms = 10
 
 [G14.22-0.50_S_alma1_pvmap_out]
@@ -81,4 +82,4 @@ ylim = 10 30 km/s
 hlines = 19.61 km/s
 rms = 1.3 mJy/beam
 vmax = 15 mJy/beam
-label = G14.22-0.50 S ALMAe${almae} PA=${paval}${deg}
+#label = G14.22-0.50 S ALMAe${almae} PA=${paval}${deg}
