--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig3.7.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig3.7.cfg
@@ -7,7 +7,7 @@ styles = maps lipari_r aspect_auto
 vertical_cbar = false
 horizontal_cbar = true
 left = 0.85
-right = 0.2
+right = 0.3
 top = 0.6
 bottom = 0.5
 hspace = 0.5
@@ -65,6 +65,7 @@ markers = -0.32 arcsec 26.0 km/s, 0.030 arcsec 32.9 km/s
 markers_physframe = data
 markers_marker = ^, v
 markers_mec = #46eff2
+markers_mfc = #46eff2
 markers_ms = 10
 
 [G35.20_alma2_pvmap_out]
