--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig3.17.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig3.17.cfg
@@ -7,7 +7,7 @@ styles = maps lipari_r aspect_auto
 vertical_cbar = false
 horizontal_cbar = true
 left = 0.85
-right = 0.2
+right = 0.3
 top = 0.6
 bottom = 0.5
 hspace = 0.5
@@ -63,6 +63,7 @@ markers = -0.17 arcsec 31.9 km/s
 markers_physframe = data
 markers_marker = ^
 markers_mec = #46eff2
+markers_mfc = #46eff2
 markers_ms = 10
 
 [W33A_alma1b_pvmap_out]
