Change fit color

--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.26.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.26.cfg
@@ -43,7 +43,8 @@ basedir = ..
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
 # Colors
-class = #8cd867
+#class = #8cd867
+class = #67d62f
 keplerian = #ef2d56
 label_alpha = 0.9
 label_edgecolor = ${class}
