--- a/configs/plots/papers/figsets/dihca6_pv_maps_fig2.26.cfg
+++ b/configs/plots/papers/figsets/dihca6_pv_maps_fig2.26.cfg
@@ -44,7 +44,7 @@ results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
 # Colors
 #class = #8cd867
-class = #67d62f
+class = #4ccf0a
 keplerian = #ef2d56
 label_alpha = 0.9
 label_edgecolor = ${class}
