Change fit color

--- a/configs/plots/papers/group_pv_maps.13.cfg
+++ b/configs/plots/papers/group_pv_maps.13.cfg
@@ -42,7 +42,7 @@ basedir = ..
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
 # Colors
-class = #8cd867
+class = #4ccf0a
 keplerian = #ef2d56
 label_alpha = 0.9
 label_edgecolor = k
@@ -172,7 +172,7 @@ xrange = -0.9900000000000792 0.9900000000000792 arcsec
 yunit = km/s
 sampling = 500
 linestyle = -
-color = #8cd867
+color = #4ccf0a
 model_amplitude = -9.66389486517509
 model_x_0 = 0.034482758620689655
 model_alpha = 0.7755267109594368
