--- a/configs/feria_fit/G335.579-0.272_alma3.cfg
+++ b/configs/feria_fit/G335.579-0.272_alma3.cfg
@@ -9,7 +9,7 @@ vsys = -48.8 km/s
 
 [data]
 basedir = ../results/G335.579-0.272/c5c8/per_hot_core/
-cube = ${basedir}/line_cubes/alma3_CH3OH_18_3_15_-17_4_14_A_vt_0_nchans40.fits
+cube = ${basedir}/line_cubes/alma3_CH3OH_18_3_15_-17_4_14_A_vt_0_nchans50.recenter_vlsr.fits
 cube_rms = 1.8 mJy/beam
 # For cube mask
 #cube_nsigma = 5
@@ -21,7 +21,7 @@ pv_width = 0.05 arcsec
 pv_length = 1 arcsec
 # For pv mask
 #pv_nsigma = 3
-pv_dilate = 20
+#pv_dilate = 20
 
 [molecule]
 name = CH3OH
@@ -33,6 +33,7 @@ transition = 18(3,15)-17(4,14)A,vt=0
 [fixed_params]
 rot = -1
 rin = 10
+#rin = CB
 ireheight = 0.
 ireflare = 30
 irenprof = -1.5
@@ -48,8 +49,8 @@ pvdec = 0.0
 pvpa = 202
 
 [param_ranges]
-mass = 3 60
-rcb = 10 1000
+mass = 3 100
+rcb = 20 800
 incl = -90 90
 rout = 500 5000
 lw = 0.1 3.0
